fix index page layout problem in mobile

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -359,6 +359,9 @@
   .textSection .wrapper {
     padding: 2em 20px;
   }
+  .exampleSection pre {
+    display: none;
+  }
   .exampleSection pre code {
     font-size: 10px;
   }
